--- a/style.css
+++ b/style.css
@@ -1,3 +1,66 @@
 body {
+    margin: 0;
     font-family: 'Source Sans Pro', sans-serif;
+    font-size: 13px;
+}
+
+.container {
+    display: block;
+    margin: 0 auto;
+    width: 375px;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 16px;
+    height: 67px;
+    border-bottom: 1px solid #C6C6C6;
+}
+
+.logo {
+    width: 127px;
+}
+
+.avatar {
+    border-radius: 50%;
+    width: 34px;
+    height: 34px;
+}
+
+.post-container {
+    padding: 0 10px;
+}
+
+.user-bar {
+    display: flex;
+    align-items: center;
+    gap: 7px;
+    padding: 11px 0;
+}
+
+.fullname {
+    margin: 0;
+}
+
+.location {
+    font-size: 12px;
+    margin: 0;
+}
+
+.post-img {
+    width: 100%;
+}
+
+.interaction-bar {
+    display: flex;
+    gap: 20px;
+    height: 30px;
+}
+
+.fullname,
+.post-likes,
+.username {
+    font-weight: 700;
 }
